manifests/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arash-external-api-dev
  namespace: arash
spec:
  selector:
    matchLabels:
      app: arash-external-api-dev
  template:
    metadata:
      labels:
        app: arash-external-api-dev
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: arash-external-api-dev
            optional: true
        image: repo3.lucidfirm.ir/primebot/arash-external-api:dev-latest
        imagePullPolicy: Always
        name: arash-external-api-dev
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 40
          periodSeconds: 30
          timeoutSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        resources:
          limits:
            cpu: "2"
            memory: 2Gi
      imagePullSecrets:
      - name: regcred
      restartPolicy: Always
